gdk/x11: Check if we have access to GL before using GLX API

If the platform does not have access to libGL then any call to GL and
GLX API through libepoxy will fail with an assertion. Until such time
that libepoxy exposes API for us to use, we can simply dlopen libGL
ourselves and do a symbol check.

[smcv: fix typo]

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=775279
Bug-Debian: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=847366
Applied-upstream: no, GTK+ 4 added a dependency on newer libepoxy instead